<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.teamraid.ratastic.LoginActivity">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="387dp"
        android:layout_marginStart="17dp"
        android:layout_alignTop="@+id/signInBtn"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpButtonText"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="387dp"
        android:layout_below="@+id/cancelButton"
        android:layout_alignStart="@+id/cancelButton"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginStart="32dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="98dp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/emailEdit"
        android:layout_alignStart="@+id/emailEdit" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#999999"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="#999999"
        android:textColor="#000000"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="135dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="387dp"
        android:layout_marginStart="58dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="89dp" />

    <TextView
        android:id="@+id/helpTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancelButton"
        android:layout_alignEnd="@+id/passwordEdit"
        android:text="@string/help"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/failedLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/helpTextBtn"
        android:layout_alignStart="@+id/passwordEdit"
        android:layout_marginBottom="11dp"
        android:text="@string/successfulLogin"
        android:textColor="#FF0000"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="285dp" />

    <TextView
        android:id="@+id/unverified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unverified"
        android:textColor="#FF0000"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="285dp"
        android:visibility="gone"
        android:layout_above="@+id/helpTextBtn"
        android:layout_alignStart="@+id/failedLoginText" />

    <CheckBox
        android:id="@+id/adminCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/helpTextBtn"
        android:layout_alignStart="@+id/passwordEdit"
        android:layout_marginBottom="36dp"
        android:text="@string/admin"
        android:visibility="invisible" />
</RelativeLayout>
