...
    <string name="cancel">Cancel</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="help">Help</string>
    <string name="successfulLogin"> </string>
    <string name="unsuccessfulLogin">Unsuccessful login. Please try again.</string>
    <string name="unverified">Account has not been verified.</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>
    <string name="selectSighting">Click a sighting below</string>
    <string name="report">Report</string>
    <string name="view_map">View Map</string>
...
