<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.teamraid.ratastic.ReportRatSightingActivity">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="31dp"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="422dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/reportSighting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_sighting"
        android:layout_marginStart="62dp"
        android:layout_alignBaseline="@+id/cancel"
        android:layout_alignBottom="@+id/cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp" />

    <EditText
        android:id="@+id/borough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locationType"
        android:layout_below="@+id/locationType"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/borough"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/locationType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/zip"
        android:layout_below="@+id/zip"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/location_type"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/city"
        android:layout_below="@+id/city"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/zip"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/cancel"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/borough"
        android:layout_below="@+id/borough"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/latitude"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/latitude"
        android:layout_below="@+id/latitude"
        android:ems="10"
        android:hint="@string/longitude"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/latlongerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude"
        android:layout_centerHorizontal="true"
        android:text="@string/latitude_and_longitude_must_be_numbers"
        android:textColor="#F00"
        android:visibility="invisible" />

</RelativeLayout>
